# chaos-theory

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude/: linear.md  settings.json
.claude-plugin/: marketplace.json
.claude/commands/opsx/: apply.md  archive.md  continue.md  explore.md  ff.md  new.md  sync.md  verify.md
.github/workflows/: main.yml  test.yml
openspec/: config.yaml
openspec/common/: functional.md  infra.md  technical.md
openspec/finite-skill-machine/: functional.md  infra.md  integration.feature.md  technical.md
openspec/schemas/: chaos-theory
plugins/ct/: default-critique.json
plugins/rodin/: plan.md
plugins/tokamak/: README.md  critics.chaos-theory-brownfield.json  critics.chaos-theory-greenfield.json  critics.chaos-theory-lite.json  critics.chaos-theory.json  default-critique.json  gap-detectors.chaos-theory-brownfield.json  gap-detectors.chaos-theory-greenfield.json  gap-detectors.chaos-theory-lite.json  gap-detectors.chaos-theory.json  merge-rules.chaos-theory-lite.json  merge-rules.chaos-theory.json  triage-policies.json
plugins/worktree-isolation/: README.md
research/: agent-hook-capabilities.ipynb  fsm-task-writing.ipynb  haiku-write-delegation.ipynb  hook-interactions.ipynb  lib.py  plan-mode-data-flow.ipynb  post-tool-use-hook-input.ipynb  pre-tool-use-hook-output.ipynb  task-subagent-token-overhead.ipynb
tests/rogue/: test_outside.py
tests/tools/: test_ace_learn.py  test_migrate.py
tests/worktree-isolation/: run_tests.sh
tools/: ACE.md  ace_learn.py  migrate_evaluate_to_skillbooks.py
(+346 files in other folders)
