[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-theory"
version = "0.2.0"
requires-python = ">= 3.11"

[tool.setuptools]
packages = []

[project.optional-dependencies]
test = ["pytest>=7.2.0", "pytest-asyncio>=0.23.0", "pytest-cov>=5.0.0", "pytest-timeout>=2.3.0"]
research = [
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "pandas>=2.1",
    "rich>=13.0",
    "networkx>=3.2",
    "mermaid-py>=0.8",
    "nbstripout>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests/plugins/*"]
addopts = "--import-mode=importlib"
asyncio_mode = "auto"
timeout = 30
